# Sprints_Embedded_Linux_Valeo

01_Introduction to Embedded Linux/session1/Backup Service/: README.txt
01_Introduction to Embedded Linux/session1/Creating a Simple Shell Script/: README.TXT  task1_copying.sh
01_Introduction to Embedded Linux/session2/The best WIFI network/: README.TXT
01_Introduction to Embedded Linux/session3/RPI4 headless Installation/: README.txt
02_Embedded Linux Application Development/session4/Generate the RPI 4 cross toolchain/: README.TXT
02_Embedded Linux Application Development/session5/file_handler/: CMakeLists.txt  READ_ME.txt  run_logs.txt
02_Embedded Linux Application Development/session5/implementFileHandler/: READ_ME.txt  implementFileHandler.rar  (+2 more)
02_Embedded Linux Application Development/session5/implementFileHandler/implementFileHandler/: CMakeLists.txt
02_Embedded Linux Application Development/session5/implementFileHandler/implementFileHandler/file_handler/: CMakeLists.txt  fh.cpp
02_Embedded Linux Application Development/session5/implementFileHandler/implementFileHandler/log/: CMakeLists.txt  simple_logger.cpp  simple_logger.h
02_Embedded Linux Application Development/session5/implementFileHandler/implementFileHandler/requester/: CMakeLists.txt  request.cpp
Capstone_Project/: CMakeLists.txt  Daemo_Logger.service  Daemon_logger.service  config.txt  readme.txt
Capstone_Project/Daemon_Logger/: CMakeLists.txt  Daemon_Logger.cpp
Capstone_Project/IPC_library/: CMakeLists.txt  IPC_library.cpp  IPC_library.hpp
Capstone_Project/Logger_Receiver_App/: CMakeLists.txt  Logger_Receiver_App.cpp
Capstone_Project/Math_Application/: CMakeLists.txt  Math_Application.cpp
Capstone_Project/build_crosscompile/: CMakeCache.txt  Makefile  cmake_install.cmake
Capstone_Project/build_crosscompile/Daemon_Logger/: Daemon_Logger  Makefile
Capstone_Project/build_crosscompile/IPC_library/: Makefile  cmake_install.cmake
Capstone_Project/build_crosscompile/Logger_Receiver_App/: Logger_Receiver_App  Makefile
Capstone_Project/build_crosscompile/Math_Application/: Makefile  Math_Application  cmake_install.cmake
Capstone_Project/systemd Service/: sprints_project.service
(+32 files in other folders)
